--- a/app/webpacker/src/css/layout.scss
+++ b/app/webpacker/src/css/layout.scss
@@ -28,9 +28,12 @@
 .margin-bottom-md { margin-bottom: $margin-md; }
 
 .margin-top-lg    { margin-top: $margin-lg; }
+
 .margin-right-xl  { margin-right: $margin-xl; }
+.margin-bottom-xl  { margin-bottom: $margin-xl; }
 
 .padding-md   { padding: $margin-md; }
+.padding-xl   { padding: $margin-xl; }
 .padding-x-lg {
   padding-left: $margin-lg;
   padding-right: $margin-lg;
