--- a/app/webpacker/src/css/layout.scss
+++ b/app/webpacker/src/css/layout.scss
@@ -1,4 +1,5 @@
 .flex           { display: flex; }
+.flex           { display: flex; }
 .space-between  { justify-content: space-between; }
 .flex-grow      { flex: 1; }
 
@@ -7,6 +8,7 @@
 .fixed    { position: fixed; }
 .absolute { position: absolute; }
 .top-0    { top: 0; }
+.right-0  { right: 0; }
 .left-0   { left: 0; }
 .top-50   { top: 50%; }
 .left-50  { left: 50%; }
@@ -36,13 +38,25 @@
 .margin-bottom-md { margin-bottom: $margin-md; }
 
 .margin-top-lg    { margin-top: $margin-lg; }
+.margin-right-lg  { margin-right: $margin-lg; }
 
+.margin-top-xl    { margin-top: $margin-xl; }
 .margin-right-xl  { margin-right: $margin-xl; }
 .margin-bottom-xl { margin-bottom: $margin-xl; }
+
+.no-margin-last :last-child{ margin:0}
 
 .padding-md   { padding: $margin-md; }
 .padding-xl   { padding: $margin-xl; }
 .padding-x-lg {
   padding-left: $margin-lg;
   padding-right: $margin-lg;
+}
+.padding-x-xxl  {
+  padding-left: $margin-xxl;
+  padding-right: $margin-xxl;
+}
+.padding-y-xl {
+  padding-top: $margin-xl;
+  padding-bottom: $margin-xl;
 }
