Modeling text size variations

--- a/app/webpacker/src/css/theme.scss
+++ b/app/webpacker/src/css/theme.scss
@@ -13,6 +13,7 @@
 .text-bold    { font-weight: bold; }
 .text-italic  { font-style: italic; }
 .text-larger  { font-size: 1.2em; }
+.text-extra-larger  { font-size: 1.8em; }
 .text-smaller { font-size: .95em; }
 .text-right   { text-align: right; }
 .text-center  { text-align: center; }
