Increasing the size of Modal header texts

--- a/app/webpacker/src/css/theme.scss
+++ b/app/webpacker/src/css/theme.scss
@@ -13,8 +13,9 @@
 .text-gray    { color: #777; }
 .text-bold    { font-weight: bold; }
 .text-italic  { font-style: italic; }
+.text-medium  { font-size: 1.1em; }
 .text-larger  { font-size: 1.2em; }
-.text-extra-larger  { font-size: 1.8em; }
+.text-extra-larger  { font-size: 2em; }
 .text-smaller { font-size: .95em; }
 .text-right   { text-align: right; }
 .text-center  { text-align: center; }
